# AutoHost

./: .gitignore  README.md  start.sh  zip-project.sh
backend/: .env.example  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: automation.py  connections.py  websocket.py
backend/app/core/: config.py
backend/app/schemas/: automation.py
backend/app/services/: terminal_service.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ConnectionForm.tsx  StepEditor.tsx  TerminalEmulator.tsx
frontend/src/pages/: Builder.tsx  Scripts.tsx
frontend/src/types/: automation.ts
